# mlx-lm

./: .gitignore  2ulfsnomdcsrg0supjrfdunjjrjvoumb.darc  AGENTS.md  README.md  bench-sanity.json  cache-profile.py  extract-tokens.py  fvkf6quedkarp3reqvr32sgosliovstj  jjvuccvak2cat7uijkasu2akkietmkt8  jvg2cvgtmejedkotifr5hllotbb1g5ub.darc  manifest  moe-parallel-stress.py  ofdi8a4psgemkvlbsfumcjq3qjmbvkhm.darc  pyproject.toml  run-experiment-1.sh  run-experiment-2.sh  run-experiment-3.sh  setup.py
.opencode/: handoff.md  learnings.md  opencode.jsonc
.opencode/command/: commit.md  test.md
.opencode/skills/model-quality-test/: SKILL.md
.opencode/skills/remote-mac/: SKILL.md
.opencode/skills/server/: SKILL.md
mlx_lm/: disk_cache.py  generate.py  server.py  tokenizer_utils.py  utils.py
mlx_lm/models/: base.py  cache.py  deepseek_v4.py  deepseek_v4_kernels.py  expert_offload.py  fused_moe_kernel.py  mixed_quant_cache.py  switch_layers.py  turboquant_cache.py
mlx_lm/tool_parsers/: qwen3_coder.py
scripts/: safe_server.sh
tests/: test_deepseek_v4.py  test_expert_offload.py  test_fused_kernels_8bit.py  test_prompt_cache.py  test_server.py  test_turboquant.py  test_turboquant_server_lifecycle.py  test_v4_sanitize.py
